# rust

./: .gitignore  readme.md
add/: readme.md
add/add_two/: Cargo.toml
add/adder/: Cargo.toml
adder/src/: lib.rs
arrays/src/: main.rs
binary_crate/: Cargo.toml
binary_crate/src/: main.rs
channels/src/: main.rs
closures/src/: main.rs
drop/src/: main.rs
enums/src/: main.rs
error/src/: main.rs
error_2/: Cargo.toml
error_2/src/: main.rs
functions/src/: main.rs
generics/src/: main.rs
guessing_game/src/: main.rs
hash_map/src/: main.rs
hello-async/src/: main.rs
if_let_and_let_else/src/: main.rs
library_crate/: Cargo.toml
library_crate/src/: lib.rs
lifetimes/src/: main.rs
loops/src/: main.rs
match_construct/src/: main.rs
minigrep/: readme.md
minigrep/src/: lib.rs  main.rs
mutex/src/: main.rs
mutex_2/: Cargo.toml
mutex_2/src/: main.rs
my_box/src/: main.rs
my_crate/: Cargo.toml  readme.md
ownership/src/: main.rs
ownership_2/src/: main.rs
ownership_3/src/: main.rs
playground/src/: main.rs
rectangles/src/: main.rs
references_and_borrowing/src/: main.rs
references_and_borrowing_2/: Cargo.toml
references_and_borrowing_3/: Cargo.toml
references_and_borrowing_3/src/: main.rs
references_and_borrowing_4/: Cargo.toml
references_and_borrowing_4/src/: main.rs
references_and_borrowing_5/: Cargo.toml
references_and_borrowing_5/src/: main.rs
restaurant/src/: lib.rs
slices/src/: main.rs
strings/src/: main.rs
struct_destructuring/: Cargo.toml
struct_destructuring/src/: main.rs
threads/src/: main.rs
(+6 files in other folders)
